Closed Bug 1168515 Opened 10 years ago Closed 10 years ago

GCF test case 31.13.1.4 failure : Explicit call transfer failure between held call and alerting call

Categories

(Firefox OS Graveyard :: RIL, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(blocking-b2g:2.2+, firefox39 wontfix, firefox40 wontfix, firefox41 fixed, b2g-v2.2 fixed, b2g-master fixed)

RESOLVED FIXED
2.2 S14 (12june)
blocking-b2g 2.2+
Tracking Status
firefox39 --- wontfix
firefox40 --- wontfix
firefox41 --- fixed
b2g-v2.2 --- fixed
b2g-master --- fixed

People

(Reporter: pgravel, Assigned: hsinyi)

References

Details

(Whiteboard: [caf priority: p2][CR 842794])

Attachments

(2 files)

This is a similar issue reported in bug 1159958, but here we have one held call and one alerting call. The test case is defined in 3GPP TS 51.010 Scenario : 1. Make a phone call and hold it 2. Dial a second call, let it go into the alerting state (ringing on dialed phone) 3. Dial '4' (Explicit call transfer in-call mmi code), get error message “Cannot make a call, if you are already dialing, please hang up first.” It looks like the call is being blocked because the UI still considers an "alerting" call to be in the same state as "dialing".
Whiteboard: [CR 842794] → [caf priority: p2][CR 842794]
Ni myself for issue tracking.
Flags: needinfo?(sku)
Hi Gabriele, Could you please help check if there is anything missed regarding bug 1159958? There are two cases that ECT can be triggered. 3GPP TS 23.091 4.2.2 ECT (both calls answered) 4.2.3 ECT (one call answered, the other alerting) --- 3GPP 51.010 31.13.1.6 Explicit Call Transfer invocation, expiry of T(ECT) ... Test purpose To test that the MS invokes explicit call transfer between an active held call and an alerting call by sending a FACILITY message with the correct invoke component, and returns both calls to their original states on expiry of T(ECT).
Flags: needinfo?(sku) → needinfo?(gsvelto)
Comms triage: Certification blocker on a feature implemented in 2.2
Blocks: 977588
blocking-b2g: 2.2? → 2.2+
From what I can tell there's nothing in gaia that's preventing the additional call from being made. I wonder if this is because of bug 1161905. Hsin-Yi can you shed more light on this issue?
Flags: needinfo?(gsvelto) → needinfo?(htsai)
It's not due to bug 1161905. The dial request seems to get stopped in telephony.cpp's Telephony::DialInternal[1] [1] http://mxr.mozilla.org/mozilla-central/source/dom/telephony/Telephony.cpp#230
(In reply to pgravel from comment #5) > It's not due to bug 1161905. The dial request seems to get stopped in > telephony.cpp's Telephony::DialInternal[1] > > > [1] > http://mxr.mozilla.org/mozilla-central/source/dom/telephony/Telephony.cpp#230 Thanks Phil. It looks we need to make the if conditions correct and proper.
Component: Gaia::Dialer → RIL
Flags: needinfo?(htsai)
Assignee: nobody → htsai
Status: NEW → ASSIGNED
Hi Phil, Please help verify if the patch solves the issue. Thanks.
Flags: needinfo?(pgravel)
Patch works for me, thanks!
Flags: needinfo?(pgravel)
Comment on attachment 8612207 [details] [diff] [review] [m-c] [v2.2] 0001-Bug-1168515-GCF-test-case-31.13.1.4-failure-Explicit.patch Hi Aknow, This patch removes the improper check in Telephony.cpp. Mind taking a look? Thank you.
Attachment #8612207 - Attachment description: [v2.2] 0001-Bug-1168515-GCF-test-case-31.13.1.4-failure-Explicit.patch → [m-c] [v2.2] 0001-Bug-1168515-GCF-test-case-31.13.1.4-failure-Explicit.patch
Attachment #8612207 - Flags: review?(szchen)
Comment on attachment 8612207 [details] [diff] [review] [m-c] [v2.2] 0001-Bug-1168515-GCF-test-case-31.13.1.4-failure-Explicit.patch Review of attachment 8612207 [details] [diff] [review]: ----------------------------------------------------------------- Good. Thank you.
Attachment #8612207 - Flags: review?(szchen) → review+
Hi Hsin-Yi, just a reminder to request b2g37 approval for this blocker.
Flags: needinfo?(htsai)
(In reply to Dylan Oliver [:doliver] from comment #13) > Hi Hsin-Yi, just a reminder to request b2g37 approval for this blocker. Thanks for reminding. I should wait for the patch in m-c first before asking for b2g37 approval. I will do that afterwards.
Flags: needinfo?(htsai)
Hi Ryan, My patch has been pushed to b2g-inbound a couple days but haven't been merged in to m-c. As this is a 2.2 blocker that the schedule is tight, could you kindly help check? Thank you.
Flags: needinfo?(ryanvm)
It was merged yesterday, but apparently the bug wasn't marked. Note that for future reference, hg changeset hashes are immutable, so you can verify yourself that a given cset is on mozilla-central by altering the b2g-inbound link to point to m-c instead. https://hg.mozilla.org/mozilla-central/rev/535fbd392978
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Flags: needinfo?(ryanvm)
Resolution: --- → FIXED
Target Milestone: --- → 2.2 S14 (12june)
(In reply to Ryan VanderMeulen [:RyanVM UTC-4] from comment #16) > It was merged yesterday, but apparently the bug wasn't marked. Note that for > future reference, hg changeset hashes are immutable, so you can verify > yourself that a given cset is on mozilla-central by altering the b2g-inbound > link to point to m-c instead. > https://hg.mozilla.org/mozilla-central/rev/535fbd392978 Great to learn, thanks for the assistance again :)
NOTE: Please see https://wiki.mozilla.org/Release_Management/B2G_Landing to better understand the B2G approval process and landings. [Approval Request Comment] Bug caused by (feature/regressing bug #): GCF test case 31.13.1.4 failure : Explicit call transfer failure between held call and alerting call User impact if declined: GCF failed, and user cannot explicitly transfers a held call and an alerting call Testing completed: yes, confirmed by partner Risk to taking this patch (and alternatives if risky): low because we removed a function which was separate String or UUID changes made by this patch:
Attachment #8614479 - Flags: approval-mozilla-b2g37?
Attachment #8614479 - Flags: approval-mozilla-b2g37? → approval-mozilla-b2g37+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: