Bug 1168515 - Do not block incall MMI requests on alerting state. r=aknow, a=jocheng