dom/telephony/Telephony.h
@@ -176,9 +176,6 @@ private:
   uint32_t
   ProvidedOrDefaultServiceId(const Optional<uint32_t>& aServiceId);
 
-  bool
-  HasDialingCall();
-
   already_AddRefed<Promise>
   DialInternal(uint32_t aServiceId, const nsAString& aNumber, bool aEmergency,
                ErrorResult& aRv);
